--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "bcryptjs": "^2.4.3",
