--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stripe/stripe-js": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.12",
     "lucide-react": "^0.400.0",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.4",
